--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css.css/normalaes.css" />
+    <!-- <link rel="stylesheet" href="/css.css/autoprifix.css"/> -->
     <link rel="stylesheet" href="/css.css/main.css" />
     <title>Document</title>
   </head>
@@ -135,9 +135,13 @@
         <div class="container">
           <div class="intro-box intro-box-three">
             <h2 class="booss-intro booss-intro-three">
-              Take control of your health. 
+              Take control of your health.
+            </h2>
             <p class="minitext-intro minitext-intro-three">
-              With built-in GPS and altimeter, Apple Watch Nike+ has all the features to help you take your run to the next level. You can even pair your watch wirelessly with compatible gym equipment. And it’s swimproof, so you can take a post-run dip in the pool.
+              With built-in GPS and altimeter, Apple Watch Nike+ has all the
+              features to help you take your run to the next level. You can even
+              pair your watch wirelessly with compatible gym equipment. And it’s
+              swimproof, so you can take a post-run dip in the pool.
             </p>
             <a class="intro-href intro-href-three" href="#">Explore features</a>
           </div>
